codigo antes do claude

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=192.168.15.43
 DB_PORT=3050
-DB_DATABASE=C:\nQuestorBase\manutencao20251112\_QUESTOR.FDB
+DB_DATABASE=C:\nQuestorBase\QUESTOR.FDB
 DB_USER=SYSDBA
 DB_PASSWORD=masterkey
 DB_CHARSET=WIN1252
