--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,5 +29,16 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src/renderer/**/*", "src/shared/**/*"]
+  "include": [
+    "src/renderer/**/*",
+    "src/shared/**/*",
+    "src/shared/types/MapaSaldoConta.ts",
+    "src/shared/types/PlanoContaNode.ts",
+    "src/main/services/EmpresaService.ts",
+    "src/main/services/BalanceteContabilService.ts",
+    "src/main/services/LancamentoContabilService.ts",
+    "src/main/services/PlanoConciliacaoService.ts",
+    "src/main/services/NaturezaService.ts",
+    "src/main/services/PlanoContaService.ts"
+  ]
 }
